--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
     height: 100%;
     transition-duration: 0.2s;
     transition-timing-function: ease-out;
-    z-index: 2;
+    z-index: 3;
     background-color: #33373e;
     padding: 0 0 0 2px;
     transition-duration: 0.3s;
@@ -246,6 +246,8 @@ body.minimize_siderbar .light_darkmode {
 
 body.minimize_siderbar .navContainer {
     left: 225px;
+    transition-duration: 0.2s;
+    transition-timing-function: linear;
 
 }
 
@@ -1650,6 +1652,7 @@ body.light .menu ul li.hovered {
     padding: 8px 0px 10px 18px;
     border-radius: 30px 0 0 30px;
     z-index: 3;
+
 }
 
 
@@ -1679,6 +1682,8 @@ body.light .menu ul li.hovered a ::before {
     background: transparent;
     box-shadow: 35px 35px 0 10px #151728;
     transform: translateX(1px) translateY(-64px);
+    transition-timing-function: linear;
+    transition-duration: 0.2s;
 }
 
 
@@ -1698,6 +1703,8 @@ body.light .menu ul li.hovered a ::after {
     background: transparent;
     box-shadow: 35px -35px 0 10px #ffff;
     transform: translateX(0px) translateY(31px);
+    transition-timing-function: linear;
+    transition-duration: 0.2s;
 }
 
 .menu ul li:hover a ::after,
