--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
 
 .sidenav {
     height: 100vh;
-    width: 4rem;
+    width: 77px;
     display: flex;
     flex-direction: column;
     overflow: hidden;
@@ -1435,6 +1435,117 @@ body.light .pageCount {
 }
 
 
+
+.about_section_two {
+    display: flex;
+    justify-content: center;
+    margin-top: 5rem;
+    flex-direction: column;
+    align-items: center;
+    gap: 9rem;
+}
+
+.about_container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 60%;
+}
+
+.card h3 {
+    color: #f3f3f3;
+    letter-spacing: 1px;
+    font-size: 15px;
+    font-weight: 500;
+}
+
+body.light .card h3 {
+    color: #4a4747;
+}
+
+.card blockquote {
+    color: #a5a5a5;
+}
+
+body.light .card blockquote {
+    color: #7e7e7e;
+}
+
+body.light .about_arrow {
+    fill: #4a4747;
+    ;
+}
+
+.bi-chevron-down {
+    transform: rotate(0deg);
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in;
+}
+
+.card.rotate .bi-chevron-down {
+    transform: rotate(180deg);
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in;
+}
+
+
+.header_card {
+    display: flex;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.card {
+    border: grey solid;
+    border-width: 0 0 1px 0px;
+    overflow: hidden;
+    cursor: pointer;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in;
+    max-height: 9rem;
+}
+
+.card blockquote {
+    margin: 6px 0px 22px 0px;
+    font-size: 14px;
+    line-height: 1.3;
+}
+
+.hideCard {
+    max-height: 29px;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in;
+    padding: 0px 0px 28px 0px;
+
+}
+
+.contactUs {
+    display: flex;
+    gap: 16px;
+}
+
+.aboutSvg {
+    fill: aliceblue;
+}
+
+body.light .aboutSvg {
+    fill: rgb(82, 82, 82);
+}
+
+
+.aboutSvg:hover,
+body.light .aboutSvg:hover {
+    fill: black;
+}
+
+
+
+
+
+
+
+
 /* screen size 1000px*/
 
 @media (max-width:1000px) {
@@ -1481,6 +1592,18 @@ body.light .pageCount {
 
     .first_box {
         width: 100%;
+    }
+
+    .card h3 {
+        font-size: 15px;
+    }
+
+    .about_container {
+        width: 75%;
+    }
+
+    .hideCard {
+        padding: 0px 0px 30px 0px;
     }
 }
 
@@ -1968,6 +2091,33 @@ body.light .pageCount {
         margin: 37px 2px 13px 28px;
     }
 
+    .card {
+        max-height: 11rem;
+        transition-duration: 0.3s;
+        transition-timing-function: ease-in;
+    }
+
+    .hideCard {
+        max-height: 29px;
+        transition-duration: 0.3s;
+        transition-timing-function: ease-in;
+        padding: 0px 0px 28px 0px
+    }
+
+    .card h3 {
+        font-size: 11px;
+        letter-spacing: 0.2px;
+        font-weight: 500;
+    }
+
+    .card blockquote {
+        font-size: 11px;
+    }
+
+    .about_container {
+        width: 93%;
+        margin: 0 25px 0 0px;
+    }
 }
 
 @media (max-width:445px) {
