--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ body {
     width: fit-content;
     cursor: pointer;
     text-decoration: none;
+    padding: 8px 0px 10px 18px;
 }
 
 
@@ -127,7 +128,7 @@ body {
 .menu_ul {
     display: flex;
     flex-direction: column;
-    gap: 26px;
+    gap: 50px;
     margin-left: 5rem;
 }
 
@@ -139,6 +140,7 @@ body {
     font-size: 17px;
     letter-spacing: 1px;
     display: none;
+    opacity: 0.7;
 }
 
 
@@ -213,14 +215,14 @@ body.minimize_siderbar .menu {
 body.minimize_siderbar .menu_ul {
     display: flex;
     flex-direction: column;
-    gap: 26px;
+    gap: 45px;
     margin-left: 0rem;
 }
 
 
 
 body.minimize_siderbar .sidenavlinks {
-
+    padding: 8px 95px 10px 18px;
     gap: 15px;
 }
 
@@ -2326,7 +2328,7 @@ body.light .msg_episode {
     cursor: pointer;
     width: 100%;
     color: white;
-    padding: 8px 0px 10px 18px;
+    /* padding: 8px 0px 10px 18px; */
     border-radius: 30px 0 0 30px;
     z-index: 3;
 
@@ -2393,6 +2395,8 @@ body.light .menu ul li.hovered a ::after {
 
 
 }
+
+
 
 
 .menu ul li:hover,
