--- a/style.css
+++ b/style.css
@@ -582,8 +582,10 @@ body.minimize_siderbar .section_one_movieDetail {
 .poster {
     width: inherit;
     border-radius: 20px;
-    transition-duration: 0.3s;
-    transition-timing-function: linear;
+    transition-duration: 0.2s;
+    transition-timing-function: ease-in-out;
+    height: 15rem;
+
 }
 
 .posterlink {
@@ -593,8 +595,8 @@ body.minimize_siderbar .section_one_movieDetail {
 .poster:hover {
     opacity: 0.7;
     transform: scale(1.07);
-    transition-duration: 0.3s;
-    transition-timing-function: linear;
+    transition-duration: 0.2s;
+    transition-timing-function: ease-in-out;
 }
 
 
@@ -644,6 +646,7 @@ body.minimize_siderbar .section_one_movieDetail {
     font-size: 10px;
     color: #d9d9d9;
     border-radius: 4px;
+    opacity: .7;
 }
 
 .arrowbtn {
@@ -2482,6 +2485,9 @@ body.light .msg_episode {
         display: flex;
     }
 
+    .poster {
+        height: initial;
+    }
 
 
 }
