--- a/style.css
+++ b/style.css
@@ -398,11 +398,14 @@ body.minimize_siderbar .section_one_movieDetail {
 
 .Home_header_container {
     display: flex;
-    margin: 15px 39px 0 0;
-    gap: 40px;
-    position: relative;
-    height: 22rem;
-    top: -99px;
+    width: 100%;
+    height: 34vw;
+    margin: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+
 }
 
 
@@ -991,29 +994,22 @@ body.minimize_siderbar .section_one_movieDetail {
 
 
 .trending_container {
+    margin: 0;
+    height: inherit;
     width: 100%;
-    height: 27rem;
-    margin: 0px 0 0 24px;
-    position: absolute;
-    top: 0;
 }
 
 
 .trending_child {
-    /* background: -webkit-linear-gradient(top, rgba(125, 185, 232, 0), #151728); */
     position: absolute;
-    height: 27rem;
+    height: inherit;
     z-index: 1;
-    width: 103%;
+    width: 100%;
     background: hsla(0, 0%, 91%, 1);
-
     background: radial-gradient(circle, hsla(0, 0%, 91%, 1) 0%, hsla(234, 31%, 12%, 1) 100%);
-
     background: -moz-radial-gradient(circle, hsla(0, 0%, 91%, 1) 0%, hsla(234, 31%, 12%, 1) 100%);
-
-    background: -webkit-radial-gradient(circle, hsla(0, 0%, 91%, 0%) 0%, hsla(234, 31%, 12%, 1) 97%);
-
-    left: -3px;
+    background: -webkit-radial-gradient(circle, hsla(0, 0%, 91%, 0%) 0%, hsla(234, 31%, 12%, 1) 86%);
+    left: 0px;
     right: 0;
 
 }
@@ -1065,20 +1061,20 @@ body.minimize_siderbar .section_one_movieDetail {
     position: absolute;
     top: 50%;
     z-index: 2;
-    width: inherit;
+    width: 94%;
     display: flex;
     justify-content: space-between;
     cursor: pointer;
+    right: 0;
 }
 
 .trending_details {
-
     width: 100%;
-
-    bottom: 3rem;
-
     text-align: center;
     filter: drop-shadow(2px 0px 1px black);
+    position: absolute;
+    bottom: 5vw;
+
 }
 
 .Trending_heading {
@@ -1086,12 +1082,12 @@ body.minimize_siderbar .section_one_movieDetail {
 
     color: #ffffff;
     letter-spacing: 2px;
-    font-size: 30px;
+    font-size: 22px;
 }
 
 .trending_title {
     color: #f1efef;
-    font-size: large;
+    font-size: 3vw;
     font-family: cursive;
 }
 
@@ -1103,6 +1099,9 @@ body.minimize_siderbar .section_one_movieDetail {
 
 
 
+.Now_playing_movies_container_trend {
+    margin-top: 33vw;
+}
 
 
 
@@ -2046,17 +2045,12 @@ body.light .msg_episode {
 
 
 
-    .Home_header_container {
-        height: 20rem;
 
-    }
 }
 
 @media (max-width:740px) {
 
-    .Home_header_container {
-        height: 18rem;
-    }
+
 
 
 
@@ -2073,13 +2067,7 @@ body.light .msg_episode {
 
 }
 
-@media (max-width:720px) {
-    .Home_header_container {
-        height: 17rem;
-    }
 
-
-}
 
 
 
@@ -2123,7 +2111,7 @@ body.light .msg_episode {
     }
 
     .navContainer {
-        padding: 0px 84px 0px 20px;
+        padding: 0px 75px 0px 20px;
         left: 0px;
         justify-content: space-evenly;
 
@@ -2131,8 +2119,8 @@ body.light .msg_episode {
 
 
     .navContainer input {
-        width: 65%;
-        margin: 0 48px 0 48px;
+        width: 82%;
+        margin: 1px 11px 0 15px;
     }
 
 
