--- a/style.css
+++ b/style.css
@@ -2612,7 +2612,8 @@ body.light .msg_episode {
 
     .about_container {
         width: 93%;
-        margin: 0 25px 0 0px;
+        margin: auto;
+        padding: 0 15px;
     }
 
     .msg_episode {
